add inquire, clap and windows features enabled

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+inquire = "0.9.1"
+clap = { version = "4.5.53", features = ["derive"] }
 windows = { version = "0.54", features = [
   "Win32_System_Threading",
   "Win32_System_Memory",
-  "Win32_Foundation"
+  "Win32_Foundation",
+  "Win32_System_ProcessStatus",
+  "Win32_System_Diagnostics_Debug",
 ]}
